prevent sticky nav from covering parent comment

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -121,4 +121,11 @@
   #comments_count {
     display: none;
   }
+
+  :target::before {
+    content: "";
+    display: block;
+    height: 50px;
+    margin: -50px 0 0;
+  }
 }
